# autowired-rs

./: Cargo.toml  README.md
autowired-derive/: Cargo.toml  README.md
autowired-derive/src/: lib.rs
src/: bean.rs  beans.rs  lib.rs
tests/: basic.rs  distributed-registration.rs  lazy.rs  return_option.rs
