[package]
name = "autowired"
version = "0.0.0"
authors = ["ninthakeey <ninthakeey@hotmail.com>"]
edition = "2018"
description = "Rust dependency injection [WIP]"
keywords = ["injection"]
license = "Apache-2.0"

[dependencies]
autowired-derive = { path = "./autowired-derive" }

futures-lite = "1.11"
once_cell = "1.4"
dashmap = "4"
log = "0.4"