[package]
name = "autowired"
version = "0.1.3"
authors = ["ninthakeey <ninthakeey@hotmail.com>"]
edition = "2018"
description = "Rust dependency injection"
keywords = ["injection"]
license = "Apache-2.0"
repository = "https://github.com/nintha/autowired-rs"
homepage = "https://github.com/nintha/autowired-rs"

[dependencies]
autowired-derive = { path = "./autowired-derive", version = "0.1.3" }

inventory = "0.1.10"
once_cell = "1.4"
dashmap = "4"
log = "0.4"

[dev-dependencies]
anyhow = "1.0.39"
