[package]
name = "autowired-derive"
version = "0.1.3"
authors = ["ninthakeey <ninthakeey@hotmail.com>"]
edition = "2018"
description = "Autowired project derive macro support"
keywords = ["autowired"]
license = "Apache-2.0"
repository = "https://github.com/nintha/autowired-rs"
homepage = "https://github.com/nintha/autowired-rs"

[lib]
proc-macro = true

[dependencies]
syn = "0.14"
quote = "0.6"